# chatgpt_telegram_bot

./: .example.env  .gitignore  Dockerfile  DockerfileFlask  DockerfileSqlite  README.md  docker-compose-sqlite.yml  docker-compose.yml  pyproject.toml  requirements.txt
bot/: bot.py  chat_modes.json  chatgpt.py  conf.py  config.py  database.py  database_mongo.py  database_sqlite.py  kandinsky_fusion_brain.py  kandinsky_replicate.py
config/: config.example.env  config.example.yml
interference/: app.py  requirements.txt
scripts/: backup_db.sh  deploy.sh
src/bot/: bot.py  chatgpt.py
src/config/: config.example.yml
