[tool.poetry]
name = "chatgpt-telegram-bot"
version = "1.0.0"
description = "Telegram bot for seamless engagement with ChatGPT models."
authors = ["tmlnv <tmlnv@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "0.6.0"
python-dotenv = "0.21.0"
python-telegram-bot = {version = "20.1", extras = ["rate-limiter"]}
pyyaml = "6.0"
tiktoken = ">=0.3.0"
pydub = ">=0.25.1,<0.26.0"
requests = ">=2.32.2,<2.33.0"
aiohttp = ">=3.8.4,<3.10.0"
openai = ">=0.27.2,<0.28.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pylint = "^3.1.0"
isort = "^5.13.2"
neovim = "^0.3.1"


[tool.isort]
line_length = 120
multi_line_output = 3

[tool.pylint]
max-line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
